# Test

./: AcqInterface.h  README.md
Cartesio/: Cartesio-cache.lib  Cartesio-rescue.lib  Cartesio.bak  Cartesio.kicad_pcb  Cartesio.net  Cartesio.pro  DDR_RAM.bak  ETHERNET.bak  I2C.sch  NAND_Flash.sch  Power_supply.sch  SD_card.sch  SPI.sch  UART.sch  USB.sch  _autosave-Cartesio.kicad_pcb  saet_worksheet.kicad_wks
Cartesio/01_calc/: Pin assignment verification.ods
KiCad/3934/: Pulsante-cache.lib  Pulsante.bak  Pulsante.kicad_pcb  Pulsante.kicad_pcb-bak  Pulsante.net  Pulsante.pro  Pulsante.sch
KiCad/3935/: CS3935-cache.lib  CS3935.bak  CS3935.kicad_pcb  CS3935.kicad_pcb-bak  CS3935.net  CS3935.pro  CS3935.sch
KiCad/varcolan_sv_modified/: README
KiCad/varcolan_sv_modified/13_reference_projects/ComLinux/src/: Makefile  Makefile.am  aes.c  interface.c  interface.h  main.c  saet.c
KiCad/varcolan_sv_modified/13_reference_projects/ComLinux/src/.deps/: aes.Po  callbacks.Po  interface.P  main.Po  saet.Po
Micro/01_Generic_Tests/: Readme  Test.c  Test.elf  Test.hex  Test1.c  Test2.c  msp430g2433.h
Micro/02_UART/: Makefile  Test.c  Test.elf  Test.hex
customized_kicad_lib/: README
customized_kicad_lib/3D/: 91228-0001.stp  91228-0001.wrl
customized_kicad_lib/sch/: saet.bak  saet.bck  saet.dcm  (+1 more)
src/: CommSC8R.cpp  CommSC8R.h  GlobalData.h  ServerInterface.cpp  ServerInterface.h  SocketServer.cpp  SocketServer.h  TestUtils.cpp  main.cpp  version.h
src_original/: TestUtils.cpp  TestUtils.h  global.h  main.cpp  protCommands.h  version.h
test/: test.kicad_pcb  test.pro
(+1336 files in other folders)
